--- a/index.html
+++ b/index.html
@@ -35,13 +35,9 @@
     </div>
     <div align = "center" id ="add" >
 <div style = "opacity:1;animation-name:hello;animation-duration:1.2s;">
-        <div style = "opacity:0.67;"class="spinner-border spinner-border-sm text-light" role="status">
-                <span class="sr-only" style = "color:#ffffff;opacity:0.4;">Connection Seems To Be Weak</span>
-              </div>
-
        <div style="display:inline;font-size:12.5px;padding-left:3px;color:#f2e7fe;opacity:0.65;"> 
         <b>
-            Collecting Elements | Please Wait
+            We Will Be Soon Available | © Noble Mittal 2020
         </b>
     </div>
  
