--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <div style = "opacity:1;animation-name:hello;animation-duration:1.2s;">
        <div style="display:inline;font-size:12.5px;padding-left:3px;color:#f2e7fe;opacity:0.65;"> 
         <b>
-            We Will Be Soon Available | © Noble Mittal 2020
+            Under Development | © Noble Mittal 2020
         </b>
     </div>
  
