Adding Signature Comment
Every website is equipped with signature comment so is this one

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 
 <body style="background-color:#121212;">
+    <!--Just Noble Mittal Things-->
     <div style="font-family: 'Baloo Tamma 2', cursive;font-size:22px;margin-top:18%;" align="center" id="add">
         <span style = "color:#ffffff;opacity:0.77;">
                 &lt/
