Updating:Title ; Addition: Favicon

--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <html>
+    <link rel="icon" href="tools-solid.svg">
 
 <head>
     <title>
-        Noble Loading
+        Noble Mittal- Under Development
     </title>
     <link href="index.css" rel="stylesheet">
     <meta charset=utf-8><meta http-equiv=X-UA-Compatible content="IE=edge"><meta name=viewport content="width=device-width,initial-scale=1">
