Updating The Head Tag With Google Analytics
To See The Viewers

--- a/index.html
+++ b/index.html
@@ -2,6 +2,16 @@
     <link rel="icon" href="tools-solid.svg">
 
 <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-163874009-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-163874009-1');
+</script>
+
     <title>
         Noble Mittal- Under Development
     </title>
