--- a/index.html
+++ b/index.html
@@ -53,7 +53,10 @@
             Under Development | © Noble Mittal 2020
         </b>
     </div>
- 
+  <br>
+   
+        <img src="dev.gif" width="15%" height="20%">
+
 </div>
 </div>
         <script>
