--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     </div>
   <br>
    
-        <img src="dev.gif" width="15%" height="20%">
+        <img src="dev.gif" width="210" height="130">
 
 </div>
 </div>
