Positioning The Dev Gif

--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
     </div>
   <br>
     <br>
-    <br>
+    
        
-        <img src="dev.gif" width="210" height="130">
+        <img style = "margin-left:-13px;" src="dev.gif" width="225px" height="140px">
 
 </div>
 </div>
