--- a/index.html
+++ b/index.html
@@ -36,13 +36,14 @@
                 &lt/
         </span>
         <span id="total" style="display:inline;opacity:0.8;animation-name:hello;animation-duration:1.2s;">
-            <span id = "cam"  style="animation-name:cam;animation-duration:6s;color:#bb86fc;">N
+            <span id = "cam"  style="animation-name:cam;animation-duration:6s;color:#bb86fc;">
+                    <span style = "font-size:30px;">N</span>
 
                 <span id="l1">o</span>
                 <span id="l2">b</span>
                 <span id="l3">l</span>
                 <span id="l4">e</span>
-                M
+                    <span style = "font-size:30px;">M</span>
                 <span id="l5">i</span>
                 <span id="l6">t</span>
                 <span id="l7">t</span>
