--- a/404.html
+++ b/404.html
@@ -42,7 +42,7 @@
             404
         </div>
         <div id="cont" style="font-family: 'Baloo Tamma 2', cursive;font-size:18px;">
-            The web page you are lookig for must be lost somewhere in the mountains.
+            The web page you are looking for must be lost somewhere in the mountains.
             <br> Get Ready! Climb Mountains To Discover. 
             <br>
             <br>
