--- a/index.html
+++ b/index.html
@@ -65,6 +65,8 @@
     <br>
 
         <img style = "margin-left:-10px;" src="dev.gif" width="225px" height="140px">
+        <br>
+        <img src = "92055249_2886765738070209_5775506505059008512_n.jpg" alt = "Noble Mittal" width="30px" height="20px">
 
 
 </div>
