--- a/index.html
+++ b/index.html
@@ -59,14 +59,14 @@
 <div style = "opacity:1;animation-name:hello;animation-duration:1.2s;">
        <div id = "info1" style="display:inline;font-size:12.5px;padding-left:3px;color:#f2e7fe;opacity:0.65;"> 
         <b>
-            Under Development | © Noble Mittal 2020
+            Under Development | ©<img src = "92055249_2886765738070209_5775506505059008512_n.jpg" alt = "Noble Mittal" width="25px" height="19px">Noble Mittal 2020
         </b>
     </div>
     <br>
 
         <img style = "margin-left:-10px;" src="dev.gif" width="225px" height="140px">
         <br>
-        <img src = "92055249_2886765738070209_5775506505059008512_n.jpg" alt = "Noble Mittal" width="30px" height="20px">
+        
 
 
 </div>
