--- a/404.html
+++ b/404.html
@@ -38,7 +38,7 @@
                 &gt
             </span>
         </div>
-        <div id="errh" style="animation-name:borch;animation-iteration-count: infinite;animation-duration:2s;font-size:100px;">
+        <div id="errh" onmouseover="typeWriter()" style="animation-name:borch;animation-iteration-count: infinite;animation-duration:2s;font-size:100px;">
             404
         </div>
         <div id="cont" style="font-family: 'Baloo Tamma 2', cursive;font-size:18px;">
