--- a/404.html
+++ b/404.html
@@ -42,7 +42,9 @@
             404
         </div>
         <div id="cont" style="font-family: 'Baloo Tamma 2', cursive;font-size:18px;">
-
+            The Web Page You Are Looking For Must Be Lost Somewhere In The Mountains. 
+            <br> Get Ready! Climb Mountains To Discover.
+            <br><br>
         </div>
         <a style="color: white;font-family: 'Baloo Tamma 2', cursive;font-size:18px;" href="http://beingnoble03.github.io">
             <div class="typewriter">
@@ -53,18 +55,6 @@
 © Noble Mittal 2020
         </div>
     </center>
-    <script>
-        var i = 0;
-var txt = 'The web page you are looking for must be lost somewhere in the mountains. <br> Get Ready! Climb Mountains To Discover.<br><br>';
-var speed = 100;
-
-function typeWriter() {
-  if (i < txt.length) {
-    document.getElementById("cont").innerHTML += txt.charAt(i);
-    i++;
-    t = setTimeout(typeWriter, speed);
-  } 
-    </script>
 </body>
 
 </html>
