--- a/404.html
+++ b/404.html
@@ -147,28 +147,28 @@ Oh No, Bad Luck!
   <span
      class="txt-rotate"
      data-period="1000"
-     data-rotate='[ "Redirect To Homepage", "Jump To BeingNoble03.github.io" ]'></span>
+     data-rotate='[ "Homepage", "BeingNoble03.github.io" ]'></span>
      </a>
 </h2>
    <h2>#<a style = "color: #888;" href = "http://www.facebook.com/noble.mittal">
   <span
      class="txt-rotate"
      data-period="1000"
-     data-rotate='[ "My Facebook Profile", "Jump To Facebook.com/Noble.Mittal" ]'></span>
+     data-rotate='[ "My Facebook Profile", "Facebook.com/Noble.Mittal" ]'></span>
      </a>
 </h2>
 <h2>#<a style = "color: #888;" href = "https://www.instagram.com/being_noble03/">
   <span
      class="txt-rotate"
      data-period="1000"
-     data-rotate='[ "My Instagram Profile", "Jump To Instagram.com/Being_Noble03" ]'></span>
+     data-rotate='[ "My Instagram Profile", "Instagram.com/Being_Noble03" ]'></span>
      </a>
 </h2>
 <h2>#<a style = "color: #888;" href = "https://github.com/BeingNoble03">
   <span
      class="txt-rotate"
      data-period="1000"
-     data-rotate='[ "My Github Profile", "Jump To Github.com/BeingNoble03" ]'></span>
+     data-rotate='[ "My Github Profile", "Github.com/BeingNoble03" ]'></span>
      </a>
 </h2>
 <div id = "log" align = "center" style = "padding-top:200px;">
