--- a/404.html
+++ b/404.html
@@ -141,7 +141,9 @@ font-weight: 200;
         </center>
         <br>
 <h1>
-Oh No, Bad Luck!
+Oh No, Bad Luck! 404 Is An Unlucky Number
+   <br>
+   No Problem, These Links Will Make You Lucky Again!
 </h1>
 <h2>#<a style = "color: #888;" href = "http://beingnoble03.github.io">
   <span
