--- a/404.html
+++ b/404.html
@@ -141,7 +141,7 @@ font-weight: 200;
         </center>
         <br>
 <h1>
-Oh No, Bad Luck! 404 Is An Unlucky Number
+Oh No, 404 Says Bad Luck!
    <br>
    No Problem, These Links Will Make You Lucky Again!
 </h1>
