--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </script>
 <!--Just Noble Mittal Thigs-->
     <title>
-        Noble Mittal- Under Development
+        Noble Mittal- Lectures Uploaded
     </title>
     <link href="index.css" rel="stylesheet">
     <meta charset=utf-8><meta http-equiv=X-UA-Compatible content="IE=edge"><meta name=viewport content="width=device-width,initial-scale=1">
@@ -59,14 +59,17 @@
 <div style = "opacity:1;animation-name:hello;animation-duration:1.2s;">
        <div id = "info1" style="display:inline;font-size:12.5px;padding-left:3px;color:#f2e7fe;opacity:0.65;"> 
         <b>
-            Coming Soon | © <img style = "display:none;" src = "92055249_2886765738070209_5775506505059008512_n.jpg" alt = "Noble Mittal" width="25px" height="19px">Noble Mittal 2020
+            Lectures | © <img style = "display:none;" src = "92055249_2886765738070209_5775506505059008512_n.jpg" alt = "Noble Mittal" width="25px" height="19px">Noble Mittal 2020
         </b>
     </div>
     <br>
 
         <br>
-        
-
+       <a href = "https://drive.google.com/file/d/1bY3gWet_dxr33242MMI6zJC3NguybFfu/view?usp=sharing">
+               Electrostatics L 28 </a>
+        <br>
+         <a href = "https://drive.google.com/file/d/1zldief1PiarkJXPRc6gzImNahIm7szMr/view?usp=sharing">
+               Electrostatics L 29 </a>
 
 </div>
 </div>
