--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@
 
         <br>
        <a href = "https://drive.google.com/file/d/1bY3gWet_dxr33242MMI6zJC3NguybFfu/view?usp=sharing">
-               Electrostatics L 28 </a>
+               Error Measurement L 28 </a>
         <br>
          <a href = "https://drive.google.com/file/d/1zldief1PiarkJXPRc6gzImNahIm7szMr/view?usp=sharing">
-               Electrostatics L 29 </a>
+               Error Measurement L 29 </a>
 
 </div>
 </div>
