--- a/index.html
+++ b/index.html
@@ -61,11 +61,13 @@
         <b>
             Coming Soon | #DoWhatYouCan't | © <img style = "display:none;" src = "92055249_2886765738070209_5775506505059008512_n.jpg" alt = "Noble Mittal" width="25px" height="19px">Noble Mittal 2020
         </b>
+               
     </div>
     <br>
-
+<br>
+       
         <br>
-
+        <a href = "https://drive.google.com/file/d/12EBTvVDqQTk7RvgC-vUwVWD7S_RK634d/view?usp=sharing">Solid State Notes (Downloadable)</a>
 </div>
 </div>
         <script>
