--- a/404.html
+++ b/404.html
@@ -145,14 +145,14 @@ Oh No, 404 Says Bad Luck!
    <br>
    No Problem, These Links Will Make You Lucky Again!
 </h1>
-<h2>#<a style = "color: #888;" href = "http://beingnoble03.github.io">
+<h2>-&gt<a style = "color: #888;" href = "http://beingnoble03.github.io">
   <span
      class="txt-rotate"
      data-period="2000"
      data-rotate='[ "Homepage", "BeingNoble03.github.io" ]'></span>
      </a>
 </h2>
-   <h2>#<a style = "color: #888;" href = "http://www.facebook.com/noble.mittal">
+   <h2><a style = "color: #888;" href = "http://www.facebook.com/noble.mittal">
   <span
      class="txt-rotate"
      data-period="3000"
