--- a/index.html
+++ b/index.html
@@ -22,13 +22,25 @@
 </head>
 
 <body style="background-color:#121212;">
-        <div id = "sw1" style = "padding-top:5px;" align = "right" class="opa custom-control custom-switch">
+<table style = "width:100%;">
+<tr>
+<td>
+<span id = "dis1" style = "font-size:14px;color:#f2e7fe;opacity:0.65;margin-left:8px;">            <b>Discoverable On</b>
+</span><br>
+<span id = "dis2" style = "font-size:14px;animation-name:cam;animation-duration:6s;color:#bb86fc;animation-iteration-count:infinite;opacity:0.8;margin-left:8px;">           <b> 3 September 2021</b>
+</span>
+</td>
+<td>
+<div id = "sw1" style = "padding-top:5px;" align = "right" class="opa custom-control custom-switch">
             <input onclick="myFunction()" style = "padding-top:5px;" type="checkbox" class="custom-control-input" id="customSwitch1">
             <label id = "in2" style = "margin-right:7px;padding-top:3.5px;font-family: 'Comfortaa', cursive;font-size:12px;color:white;"class="custom-control-label" for="customSwitch1">Toggle Mode</label>
         </div>
         <div align = "right" id = "theme-text" style="padding-top:5px;margin-right:10px;opacity:0.75;font-family: 'Comfortaa', cursive;font-size:12px;color:white;">
             Dark Dust Mode
         </div>
+</td>
+</tr>
+        </table>
 
 
     <div style="font-family: 'Baloo Tamma 2', cursive;font-size:22px;margin-top:15%;" align="center" id="add">
@@ -60,10 +72,16 @@
        <div id = "info1" style="display:inline;font-size:12.5px;padding-left:3px;color:#f2e7fe;opacity:0.65;"> 
         <b>
             Coming Soon | #DoWhatYouCan't | © <img style = "display:none;" src = "92055249_2886765738070209_5775506505059008512_n.jpg" alt = "Noble Mittal" width="25px" height="19px">Noble Mittal 2020
-        </b>
+                      </b>
     </div>
     <br>
 <br>
+        <span id = "unv1" style="font-size:13px;padding-left:3px;color:#f2e7fe;opacity:0.65;">
+<b>Unveiling In</b>
+</span>
+    <b><p style="animation-name:cam;animation-duration:6s;color:#bb86fc;animation-iteration-count:infinite;font-size:15px;padding-left:3px;color:#f2e7fe;opacity:0.65;" id="demo">Fetching Data...</p> 
+    </b>
+    <br>
 </div>
 </div>
         <script>
@@ -81,7 +99,12 @@
           document.body.style.backgroundColor =  "#f7f7f7";
           document.getElementById('total').style.opacity = "0.8";
           document.getElementById('cam').style.animationName = "cam1";
-
+          document.getElementById('demo').style.animationName = "cam1";
+          document.getElementById('dis2').style.animationName = "cam1";
+          document.getElementById('demo').style.color = "black";
+          document.getElementById('unv1').style.color = "black";
+          document.getElementById('dis1').style.color = "black";
+document.getElementById('dis2').style.color = "black";
         } else {
           text.innerHTML = "Dark Dust Mode";
           text.style.color = "White";
@@ -92,10 +115,48 @@
           document.body.style.backgroundColor =  "#121212";
           document.getElementById('total').style.opacity = "0.8";
           document.getElementById('cam').style.animationName = "cam";
-
+document.getElementById('demo').style.color = "White";
+document.getElementById('demo').style.animationName = "cam";
+document.getElementById('dis2').style.animationName = "cam";
+          document.getElementById('dis1').style.color = "White";
+          document.getElementById('unv1').style.color = "White";
+document.getElementById('dis2').style.color = "White";
         }
       }
-
+       </script>
+<script>
+var deadline = new Date("Sep 3, 2021 15:37:25").getTime(); 
+var x = setInterval(function() { 
+var now = new Date().getTime(); 
+var t = deadline - now; 
+var days = Math.floor(t / (1000 * 60 * 60 * 24)); 
+var hours = Math.floor((t%(1000 * 60 * 60 * 24))/(1000 * 60 * 60)); 
+var minutes = Math.floor((t % (1000 * 60 * 60)) / (1000 * 60)); 
+var seconds = Math.floor((t % (1000 * 60)) / 1000); 
+document.getElementById("demo").innerHTML =days + " Days "  
++ hours + " Hours " + minutes + " Minutes " + seconds + "Sec" ; 
+    if (t < 0) { 
+        clearInterval(x); 
+        document.getElementById("demo").innerHTML = "Preseting You The Noble Mittal Blog"; 
+    } 
+}, 1000); 
+</script>
+<script>
+window.onload = function() {
+  var elements = document.getElementsByClassName('txt-rotate');
+  for (var i=0; i<elements.length; i++) {
+    var toRotate = elements[i].getAttribute('data-rotate');
+    var period = elements[i].getAttribute('data-period');
+    if (toRotate) {
+      new TxtRotate(elements[i], JSON.parse(toRotate), period);
+    }
+  }
+  // INJECT CSS
+  var css = document.createElement("style");
+  css.type = "text/css";
+  css.innerHTML = ".txt-rotate > .wrap { border-right: 0.08em solid #666 }";
+  document.body.appendChild(css);
+};
     </script>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
