--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   gtag('config', 'UA-163874009-1');
 </script>
-<!--Just Noble Mittal Thigs-->
+<!--Just Noble Mittal Things-->
     <title>
         Noble Mittal- Coming Soon
     </title>
@@ -71,7 +71,7 @@
 <div style = "opacity:1;animation-name:hello;animation-duration:1.2s;">
        <div id = "info1" style="display:inline;font-size:12.5px;padding-left:3px;color:#f2e7fe;opacity:0.65;"> 
         <b>
-            Coming Soon | #DoWhatYouCan't | © <img style = "display:none;" src = "92055249_2886765738070209_5775506505059008512_n.jpg" alt = "Noble Mittal" width="25px" height="19px">Noble Mittal 2020
+            Coming Soon | #DoWhatYouCan't | © <img style = "display:none;" src = "92055249_2886765738070209_5775506505059008512_n.jpg" alt = "Noble Mittal" width="25px" height="19px">Noble Mittal 2020 | BN03
                       </b>
     </div>
     <br>
@@ -137,7 +137,7 @@ document.getElementById("demo").innerHTML =days + " Days "
 + hours + " Hours " + minutes + " Minutes " + seconds + "Sec" ; 
     if (t < 0) { 
         clearInterval(x); 
-        document.getElementById("demo").innerHTML = "Preseting You The Noble Mittal Blog"; 
+        document.getElementById("demo").innerHTML = "Presenting You The Noble Mittal Blog"; 
     } 
 }, 1000); 
 </script>
