--- a/index.html
+++ b/index.html
@@ -109,11 +109,11 @@ cursor: pointer;
     <button class="design">
       <table class = "content" cellpadding="4px">
         <tr>
-          <td><img src = "https://cdn.iconscout.com/icon/free/png-256/github-153-675523.png" style = "height:16px;width: 16px;">
+          <td><img src = "https://cdn.iconscout.com/icon/free/png-256/github-153-675523.png" style = "height:17px;width: 17px;">
           </td>
           <td>
             <span style="font-size: 12px;font-family: 'Noto Sans', sans-serif;">
-MY GITHUB PROFILE
+ GITHUB
             </span> 
           </td>
         </tr>
@@ -127,11 +127,11 @@ MY GITHUB PROFILE
     <button class="design">
       <table class = "content" cellpadding="4px">
         <tr>
-          <td><img src = "https://cdn.iconscout.com/icon/free/png-256/facebook-social-media-fb-logo-square-44659.png" style = "height:16px;width: 16px;">
+          <td><img src = "https://cdn.iconscout.com/icon/free/png-256/facebook-social-media-fb-logo-square-44659.png" style = "height:17px;width: 17px;">
           </td>
           <td>
             <span style="font-size: 12px;font-family: 'Noto Sans', sans-serif;">
-MY FACEBOOK PROFILE
+FACEBOOK
             </span> 
           </td>
         </tr>
@@ -147,11 +147,11 @@ MY FACEBOOK PROFILE
     <button class="design">
       <table class = "content" cellpadding="4px">
         <tr>
-          <td><img src = "https://cdn.iconscout.com/icon/free/png-256/instagram-233-896451.png" style = "height:16px;width: 16px;">
+          <td><img src = "https://cdn.iconscout.com/icon/free/png-256/instagram-233-896451.png" style = "height:17px;width: 17px;">
           </td>
           <td>
             <span style="font-size: 12px;font-family: 'Noto Sans', sans-serif;">
-MY INSTAGM PROFILE
+INSTAGRAM
             </span> 
           </td>
         </tr>
