--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-        <link rel="icon" href="tools-solid.svg">
+        <link rel="icon" href="tools-solid.png">
 <head>
        <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-163874009-1"></script>
