--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </script>
 <!--Just Noble Mittal Things-->
     <title>
-        Noble Mittal- Coming Soon
+        Noble Mittal Blog
     </title>
     <link href="index.css" rel="stylesheet">
     <meta charset=utf-8><meta http-equiv=X-UA-Compatible content="IE=edge"><meta name=viewport content="width=device-width,initial-scale=1">
