--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@ cursor: pointer;
 <table style = "width:100%;">
 <tr>
 <td>
-<span id = "dis1" style = "font-size:14px;color:#f2e7fe;opacity:0.65;margin-left:8px;">            <b>Discoverable On</b>
+<span id = "dis1" style = "font-size:14px;color:#f2e7fe;opacity:0.65;margin-left:8px;">            <b></b>
 </span><br>
-<span id = "dis2" style = "font-size:14px;animation-name:cam;animation-duration:6s;color:#bb86fc;animation-iteration-count:infinite;opacity:1;margin-left:8px;">           <b> 23 October 2021</b>
+<span id = "dis2" style = "font-size:14px;animation-name:cam;animation-duration:6s;color:#bb86fc;animation-iteration-count:infinite;opacity:1;margin-left:8px;">           <b></b>
 </span>
 </td>
 <td>
@@ -88,15 +88,15 @@ cursor: pointer;
 <div style = "opacity:1;animation-name:hello;animation-duration:1.2s;">
        <div id = "info1" style="display:inline;font-size:12.5px;padding-left:3px;color:#f2e7fe;opacity:0.65;"> 
         <b>
-            Coming Soon | #DoWhatYouCan't | © <img style = "display:none;" src = "92055249_2886765738070209_5775506505059008512_n.jpg" alt = "Noble Mittal" width="25px" height="19px">Noble Mittal 2020-21 | BN03
+             #DoWhatYouCan't | © <img style = "display:none;" src = "92055249_2886765738070209_5775506505059008512_n.jpg" alt = "Noble Mittal" width="25px" height="19px">Noble Mittal 2020-21 | BN03
                       </b>
     </div>
     <br>
 <br>
         <span id = "unv1" style="font-size:13px;padding-left:3px;color:#f2e7fe;opacity:0.65;">
-<b>Unveiling In</b>
+<b>.......</b>
 </span>
-    <b><p style="animation-name:cam;animation-duration:6s;color:#bb86fc;animation-iteration-count:infinite;font-size:15px;padding-left:3px;color:#f2e7fe;opacity:0.9;" id="demo">Fetching Data...</p> 
+    <b><p style="animation-name:cam;animation-duration:6s;color:#bb86fc;animation-iteration-count:infinite;font-size:15px;padding-left:3px;color:#f2e7fe;opacity:0.9;" id="demo">Coming Soon...</p> 
     </b>
     <br>
 </div>
@@ -217,7 +217,7 @@ document.getElementById("demo").innerHTML =days + " Days "
 + hours + " Hours " + minutes + " Minutes " + seconds + "Sec" ; 
     if (t < 0) { 
         clearInterval(x); 
-        document.getElementById("demo").innerHTML = "Presenting You The Noble Mittal Blog"; 
+        document.getElementById("demo").innerHTML = "Coming Soon"; 
     } 
 }, 1000); 
 </script>
