Updated Year in Error404 and Index file

--- a/404.html
+++ b/404.html
@@ -174,7 +174,7 @@ Oh No, 404 Says Bad Luck!
      </a>
 </h2>
 <div id = "log" align = "center" style = "padding-top:200px;">
-Error 404 | © Noble Mittal 2020
+Error 404 | © Noble Mittal 2020-22
 </div>
 
 <script>
