added all files

--- a/404.html
+++ b/404.html
@@ -1,239 +1,246 @@
 <html>
-<head>
-   <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-<link href="https://fonts.googleapis.com/css?family=Raleway:200,100,400" rel="stylesheet" type="text/css" />
-    <link href="https://fonts.googleapis.com/css2?family=Baloo+Tamma+2:wght@500&display=swap" rel="stylesheet">
-<title>Error 404- Noble Mittal</title>
-    </head>
-<style>
-html,body {
-  font-family: 'Raleway', sans-serif;
-  padding-left: 1em;
-  font-size: 18px;
-  background: #222;
-  color: #aaa
-}
 
-h1,h2 {
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link href="https://fonts.googleapis.com/css?family=Raleway:200,100,400" rel="stylesheet" type="text/css" />
+  <link href="https://fonts.googleapis.com/css2?family=Baloo+Tamma+2:wght@500&display=swap" rel="stylesheet">
+  <title>Error 404- Noble Mittal</title>
+</head>
+<style>
+  html,
+  body {
+    font-family: 'Raleway', sans-serif;
+    padding-left: 1em;
+    font-size: 18px;
+    background: #222;
+    color: #aaa
+  }
+
+  h1,
+  h2 {
     margin: 0.4em 0;
-}
-h1 {
-font-weight: 400;
-font-size: 1.5em;
-}
-h2 {
-font-weight: 200;
-  color: #888;
-  font-size: 1.2em;
-}
-#log {
-font-weight: 200;
-  color: #888;
-  font-size: 0.8em;
-}
-#l1
-{
+  }
+
+  h1 {
+    font-weight: 400;
+    font-size: 1.5em;
+  }
+
+  h2 {
+    font-weight: 200;
+    color: #888;
+    font-size: 1.2em;
+  }
+
+  #log {
+    font-weight: 200;
+    color: #888;
+    font-size: 0.8em;
+  }
+
+  #l1 {
     opacity: 0;
-    animation-duration: 1.2s; 
-    animation-name:l1;
-  
-    animation-delay:0s;
+    animation-duration: 1.2s;
+    animation-name: l1;
+
+    animation-delay: 0s;
     animation-iteration-count: infinite;
   }
-@keyframes l1{
-    0% { display: block;opacity: 0;}
-    100%{display: block;opacity: 1;}
-}
-#l2
-{
-    opacity:0;
-    animation-duration: 1.2s; 
-    animation-name:l1; 
-    animation-delay:0.1s;
-    animation-iteration-count: infinite;
-  }
-  #l3
-  {
-    opacity: 0;
-    animation-duration: 1.2s; 
-    animation-name:l1;
-      animation-delay:0.2s;
-      animation-iteration-count: infinite;
+
+  @keyframes l1 {
+    0% {
+      display: block;
+      opacity: 0;
     }
-    #l4
-{
+
+    100% {
+      display: block;
+      opacity: 1;
+    }
+  }
+
+  #l2 {
     opacity: 0;
-    animation-duration:1.2s; 
-    animation-name:l1; 
-    animation-delay:0.3s;
+    animation-duration: 1.2s;
+    animation-name: l1;
+    animation-delay: 0.1s;
     animation-iteration-count: infinite;
   }
-  #l5
-{
+
+  #l3 {
     opacity: 0;
-    animation-duration: 1.2s; 
-    animation-name:l1;
-    animation-delay:0.4s;
+    animation-duration: 1.2s;
+    animation-name: l1;
+    animation-delay: 0.2s;
     animation-iteration-count: infinite;
   }
-  #l6
-{
+
+  #l4 {
     opacity: 0;
-    animation-duration: 1.2s; 
-    animation-name:l1; 
-    animation-delay:0.5s;
+    animation-duration: 1.2s;
+    animation-name: l1;
+    animation-delay: 0.3s;
     animation-iteration-count: infinite;
   }
-  #l7
-{
+
+  #l5 {
     opacity: 0;
-    animation-duration: 1.2s; 
-    animation-name:l1;
-    animation-delay:0.6s;
+    animation-duration: 1.2s;
+    animation-name: l1;
+    animation-delay: 0.4s;
     animation-iteration-count: infinite;
   }
-  #l8
-{
+
+  #l6 {
     opacity: 0;
-    animation-duration: 1.2s; 
-    animation-name:l1; 
-    animation-delay:0.7s;
+    animation-duration: 1.2s;
+    animation-name: l1;
+    animation-delay: 0.5s;
     animation-iteration-count: infinite;
   }
-  #l9
-{
+
+  #l7 {
     opacity: 0;
-    animation-duration: 1.2s; 
-    animation-name:l1;
-    animation-delay:0.8s;
+    animation-duration: 1.2s;
+    animation-name: l1;
+    animation-delay: 0.6s;
+    animation-iteration-count: infinite;
+  }
+
+  #l8 {
+    opacity: 0;
+    animation-duration: 1.2s;
+    animation-name: l1;
+    animation-delay: 0.7s;
+    animation-iteration-count: infinite;
+  }
+
+  #l9 {
+    opacity: 0;
+    animation-duration: 1.2s;
+    animation-name: l1;
+    animation-delay: 0.8s;
     animation-iteration-count: infinite;
   }
 </style>
+
 <body>
-<!--Just Noble Mittal Things-->
-          <center>
-          <div style="font-weight: 200;color: #888;font-family: 'Baloo Tamma 2', cursive;font-size:22px;" id="add">
-            <span id="ss1" style="opacity:1;">
-                &lt/
-            </span>
-            <span id="total" style="display:inline;opacity:1;animation-name:hello;animation-duration:1.2s;">
-                <span id="cam" style="animation-name:cam;animation-duration:2s;">
-                    <span style="font-size:24px;">N</span>
+  <!--Just Noble Mittal Things-->
+  <center>
+    <div style="font-weight: 200;color: #888;font-family: 'Baloo Tamma 2', cursive;font-size:22px;" id="add">
+      <span id="ss1" style="opacity:1;">
+        &lt/
+      </span>
+      <span id="total" style="display:inline;opacity:1;animation-name:hello;animation-duration:1.2s;">
+        <span id="cam" style="animation-name:cam;animation-duration:2s;">
+          <span style="font-size:24px;">N</span>
 
-                    <span id="l1">o</span>
-                    <span id="l2">b</span>
-                    <span id="l3">l</span>
-                    <span id="l4">e</span>
-                    <span style="font-size:24px;">M</span>
-                    <span id="l5">i</span>
-                    <span id="l6">t</span>
-                    <span id="l7">t</span>
-                    <span id="l8">a</span>
-                    <span id="l9">l</span>
-                </span>
-            </span>
-            <span id="ss2" style="opacity:1;">
-                &gt
-            </span>
-        </div>
-        </center>
-        <br>
-<h1>
-Oh No, 404 Says Bad Luck!
-   <br>
-   No Problem, These Links Will Make You Lucky Again!
-</h1>
-<h2>&gt <a style = "color: #888;" href = "http://beingnoble03.github.io">
-  <span
-     class="txt-rotate"
-     data-period="2000"
-     data-rotate='[ "Homepage", "BeingNoble03.github.io" ]'></span>
-     </a>
-</h2>
-   <h2>&gt <a style = "color: #888;" href = "http://www.facebook.com/noble.mittal">
-  <span
-     class="txt-rotate"
-     data-period="3000"
-     data-rotate='[ "My Facebook Profile", "Facebook.com/Noble.Mittal" ]'></span>
-     </a>
-</h2>
-<h2>&gt <a style = "color: #888;" href = "https://www.instagram.com/being_noble03/">
-  <span
-     class="txt-rotate"
-     data-period="2500"
-     data-rotate='[ "My Instagram Profile", "Instagram.com/Being_Noble03" ]'></span>
-     </a>
-</h2>
-<h2>&gt <a style = "color: #888;" href = "https://github.com/BeingNoble03">
-  <span
-     class="txt-rotate"
-     data-period="2500"
-     data-rotate='[ "My Github Profile", "Github.com/BeingNoble03" ]'></span>
-     </a>
-</h2>
-<div id = "log" align = "center" style = "padding-top:200px;">
-Error 404 | © Noble Mittal 2020-22
-</div>
+          <span id="l1">o</span>
+          <span id="l2">b</span>
+          <span id="l3">l</span>
+          <span id="l4">e</span>
+          <span style="font-size:24px;">M</span>
+          <span id="l5">i</span>
+          <span id="l6">t</span>
+          <span id="l7">t</span>
+          <span id="l8">a</span>
+          <span id="l9">l</span>
+        </span>
+      </span>
+      <span id="ss2" style="opacity:1;">
+        &gt
+      </span>
+    </div>
+  </center>
+  <br>
+  <h1>
+    Oh No, 404 Says Bad Luck!
+    <br>
+    No Problem, These Links Will Make You Lucky Again!
+  </h1>
+  <h2>&gt <a style="color: #888;" href="http://beingnoble03.github.io">
+      <span class="txt-rotate" data-period="2000" data-rotate='[ "Homepage", "BeingNoble03.github.io" ]'></span>
+    </a>
+  </h2>
+  <h2>&gt <a style="color: #888;" href="http://www.facebook.com/noble.mittal">
+      <span class="txt-rotate" data-period="3000"
+        data-rotate='[ "My Facebook Profile", "Facebook.com/Noble.Mittal" ]'></span>
+    </a>
+  </h2>
+  <h2>&gt <a style="color: #888;" href="https://www.instagram.com/being_noble03/">
+      <span class="txt-rotate" data-period="2500"
+        data-rotate='[ "My Instagram Profile", "Instagram.com/Being_Noble03" ]'></span>
+    </a>
+  </h2>
+  <h2>&gt <a style="color: #888;" href="https://github.com/BeingNoble03">
+      <span class="txt-rotate" data-period="2500"
+        data-rotate='[ "My Github Profile", "Github.com/BeingNoble03" ]'></span>
+    </a>
+  </h2>
+  <div id="log" align="center" style="padding-top:200px;">
+    Error 404 | © Noble Mittal 2020-22
+  </div>
 
-<script>
-var TxtRotate = function(el, toRotate, period) {
-  this.toRotate = toRotate;
-  this.el = el;
-  this.loopNum = 0;
-  this.period = parseInt(period, 10) || 1000;
-  this.txt = '';
-  this.tick();
-  this.isDeleting = false;
-};
+  <script>
+    var TxtRotate = function (el, toRotate, period) {
+      this.toRotate = toRotate;
+      this.el = el;
+      this.loopNum = 0;
+      this.period = parseInt(period, 10) || 1000;
+      this.txt = '';
+      this.tick();
+      this.isDeleting = false;
+    };
 
-TxtRotate.prototype.tick = function() {
-  var i = this.loopNum % this.toRotate.length;
-  var fullTxt = this.toRotate[i];
+    TxtRotate.prototype.tick = function () {
+      var i = this.loopNum % this.toRotate.length;
+      var fullTxt = this.toRotate[i];
 
-  if (this.isDeleting) {
-    this.txt = fullTxt.substring(0, this.txt.length - 1);
-  } else {
-    this.txt = fullTxt.substring(0, this.txt.length + 1);
-  }
+      if (this.isDeleting) {
+        this.txt = fullTxt.substring(0, this.txt.length - 1);
+      } else {
+        this.txt = fullTxt.substring(0, this.txt.length + 1);
+      }
 
-  this.el.innerHTML = '<span class="wrap">'+this.txt+'</span>';
+      this.el.innerHTML = '<span class="wrap">' + this.txt + '</span>';
 
-  var that = this;
-  var delta = 175 - Math.random() * 100;
+      var that = this;
+      var delta = 175 - Math.random() * 100;
 
-  if (this.isDeleting) { delta /= 2; }
+      if (this.isDeleting) { delta /= 2; }
 
-  if (!this.isDeleting && this.txt === fullTxt) {
-    delta = this.period;
-    this.isDeleting = true;
-  } else if (this.isDeleting && this.txt === '') {
-    this.isDeleting = false;
-    this.loopNum++;
-    delta = 500;
-  }
+      if (!this.isDeleting && this.txt === fullTxt) {
+        delta = this.period;
+        this.isDeleting = true;
+      } else if (this.isDeleting && this.txt === '') {
+        this.isDeleting = false;
+        this.loopNum++;
+        delta = 500;
+      }
 
-  setTimeout(function() {
-    that.tick();
-  }, delta);
-};
+      setTimeout(function () {
+        that.tick();
+      }, delta);
+    };
 
-window.onload = function() {
-  var elements = document.getElementsByClassName('txt-rotate');
-  for (var i=0; i<elements.length; i++) {
-    var toRotate = elements[i].getAttribute('data-rotate');
-    var period = elements[i].getAttribute('data-period');
-    if (toRotate) {
-      new TxtRotate(elements[i], JSON.parse(toRotate), period);
-    }
-  }
-  // INJECT CSS
-  var css = document.createElement("style");
-  css.type = "text/css";
-  css.innerHTML = ".txt-rotate > .wrap { border-right: 0.08em solid #666 }";
-  document.body.appendChild(css);
-};
-</script>
+    window.onload = function () {
+      var elements = document.getElementsByClassName('txt-rotate');
+      for (var i = 0; i < elements.length; i++) {
+        var toRotate = elements[i].getAttribute('data-rotate');
+        var period = elements[i].getAttribute('data-period');
+        if (toRotate) {
+          new TxtRotate(elements[i], JSON.parse(toRotate), period);
+        }
+      }
+      // INJECT CSS
+      var css = document.createElement("style");
+      css.type = "text/css";
+      css.innerHTML = ".txt-rotate > .wrap { border-right: 0.08em solid #666 }";
+      document.body.appendChild(css);
+    };
+  </script>
 </body>
+
 </html>
