--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         cursor: pointer;
       }
 
-      tr {
+      .parent tr{
         display: flex;
         flex-direction: column;
         align-items: center;
